<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0C03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visor"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/linha1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/esquerda"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/esquerda"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/direita"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/direita"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/virgula"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/virgula"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/correct"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:drawable/ic_input_delete"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:backgroundTint="?android:attr/colorPressedHighlight" />
        </TableRow>

        <TableRow
            android:id="@+id/linha2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/sete"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/oito"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/oito"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nove"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/nove"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/adicao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/adicao"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/linha3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/quatro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/quatro"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/cinco"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/cinco"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/seis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/seis"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtracao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/subtracao"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/linha4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/um"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/um"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dois"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/dois"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/tres"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/tres"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divisao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/divisao"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/linha5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clean"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/clean"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/igual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/igual"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="36sp" />

            <Button
                android:id="@+id/multiplicacao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/multiplicacao"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/visor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:inputType="none"
        android:padding="10dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>